# Software-Voxci

./: .env  .gitignore  README.md  arduino_com.py  config.h  database_comm.py  esp32_com.py  esp32_wifi_communicator.py  excel_export.py  index.html  main.py  package-lock.json  package.json  pyproject.toml  run.py  src.ino  tester.py  vite.config.ts  wifi_communicator.h
esp32/: config.h  wifi_communicator.h
src/: App.css  App.jsx  index.css
src/backend/: database_comm.py  esp32_wifi_communicator.py  excel_export.py  main.py  routes.py  shared_shutdown.py  shutdown.py
src/frontend/: App.css  App.jsx
