[tool.poetry]
name = "software-voxci"
version = "0.1.0"
description = ""
authors = ["samantha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pymongo = "^4.11.1"
python-dotenv = "^1.0.1"
xlsxwriter = "^3.2.2"
dotenv = "^0.9.9"
pydantic = "^2.10.6"
jwt = "^1.3.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
