[project]
name = "software-voxci"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.12.0,<5.0.0)",
    "xlsxwriter (>=3.2.3,<4.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
