[project]
name = "software-voxci"
version = "0.1.0"
description = ""
authors = [
    {name = "Samantha Raby",email = "sraby4723@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.12.0,<5.0.0)",
    "xlsxwriter (>=3.2.3,<4.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "services (>=0.1.1,<0.2.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [
    { include = "backend", from = "src" }
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
